--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ h1 {
 h2 {
   font-size: 32px;
   padding: 16px 0px;
+  /* font-weight: 600px; */
 }
 /* h3 */
 h3 {
@@ -33,28 +34,31 @@ strong {
   font-weight: 600;
 }
 
-.left__logo-w3 {
-  height: 50px;
-}
-
 .header {
+  display: flex;
+  flex-direction: column;
   position: fixed;
   width: 100%;
   background-color: white;
 }
 .top-nav-bar {
-  font-family: "Source Sans Pro TopNav", sans-serif;
-  font-weight: 500;
-  background-color: #282A35;
   display: flex;
+  font-weight: 490;
+  /* background-color: #282A35; */
   justify-content: space-between;
+  flex-direction: row;
   font-size: 16px;
 }
 
+.top-nav-bar__logo-w3 {
+  height: 50px;
+  margin: 0px 15px;
+}
+
 .top-nav-bar__left {
+  flex-grow: 2;
   display: flex;
   align-items: center; 
-  float: left;
 }
 
 .top-nav-bar__left .items a {
@@ -124,32 +128,33 @@ strong {
 .right-items a:hover {
   background-color: #F1F1F1;
 }
-.form {
+.top-nav-bar__login-register {
   border-radius: 30px;
   background-color: #D9EEE1;
   padding: 10px 10px 10px 0px;
-  margin-right: 20px;
+  margin: 5px;
 }
-.form a {
+.top-nav-bar__login-register a {
   text-decoration: none;
   padding: 10px 10px;
   border-radius: 30px;
  
 }
-.form a:first-child {
+.top-nav-bar__login-register a:first-child {
   padding: 10px 20px;
   color: white;
   background-color: #059862;
 }
-/* sub-top-bar */
-.sub-top-bar {
+
+/* sub-top-nav-bar */
+.sub-top-nav-bar {
   width: 100%;
   height: 33px;
   display: flex;
   background-color: #282A35;
   justify-content: space-between;
 }
-.sub-top-bar a {
+.sub-top-nav-bar a {
   width: auto;
   padding: 5px 15px;
   text-decoration: none;
@@ -162,7 +167,7 @@ strong {
   background-color: #059862;
   color: white;
 }
-.sub-top-bar a:hover {
+.sub-top-nav-bar a:hover {
   background-color: #000;
 }
 /* container */
@@ -375,7 +380,7 @@ strong {
   margin: 0px 10%;
 }
 /* footer */
-.footer{
+.right-container__footer{
   margin-top: 80px;
   background: url(./assets/footer.png) no-repeat center ;
   color: #DDD;
