--- a/style.css
+++ b/style.css
@@ -72,6 +72,16 @@ strong {
   background-color: #04AA6D;
 }
 
+@media screen and (max-width: 680px) {
+  .top-nav-bar__left .items a:nth-child(1),.top-nav-bar__left .items a:nth-child(2),
+  .top-nav-bar__left .items a:nth-child(4) {
+    display: none;
+  }
+  .top-nav-bar__left .items a:last-child {
+    display: block;
+  }
+}
+
 .search-box {
   display: flex;
   border: #dfdfdf 1.5px solid;
@@ -89,6 +99,12 @@ strong {
   transition: 0.4s;
   line-height: 40px;
   width: 120px;
+}
+
+@media screen and (max-width: 820px) {
+  .search-input {
+    display: none;
+  }
 }
 
 .search-box .search-input::placeholder {
@@ -128,6 +144,29 @@ strong {
 .right-items a:hover {
   background-color: #F1F1F1;
 }
+
+@media screen and (max-width: 1260px) {
+  .right-items a:first-child {
+    display: none;
+  }
+  .top-nav-bar__right{
+    min-width: 160px;
+
+  }
+}
+
+@media screen and (max-width: 1180px) {
+  .right-items a:nth-child(2) {
+    display: none;
+  }
+}
+@media screen and (max-width: 1120px) {
+  .right-item a:nth-child(3) {
+    display: none;
+  }
+}
+
+
 .top-nav-bar__login-register {
   border-radius: 30px;
   background-color: #D9EEE1;
@@ -186,6 +225,11 @@ strong {
   overflow-y: scroll;
   overflow-x: hidden;
 }
+@media screen and (max-width: 950px) {
+  .left-menu, .top-nav-bar__left {
+    display: none;
+  }
+}
 
 /* left container */
 .items__title {
@@ -209,7 +253,7 @@ strong {
 }
 
 .w3-container{
-  width: 85%;
+  width: 100%;
   
  
 }
@@ -218,10 +262,10 @@ strong {
   width: 100%;
   border-bottom: 1px solid rgb(217, 212, 212);
 }
-.w3-container .main {
+.w3-container__main {
   width: 85%;
 }
-.main img {
+.w3-container__main img {
   width: 100%;
 }
 
@@ -229,24 +273,24 @@ strong {
   width: 15%;
   border-left: 1px solid rgb(217, 212, 212);
 }
-.right img {
+.w3-container__right img {
   width: 100%;
 }
 
-.advertisements {
+.main__google-advertisements {
   width: 100%;
   height: auto;
   text-align: center;
 }
-.advertisements img {
+.main__google-advertisements img {
   margin: 10px;
   width: 80%;
 }
-/* main */
-.main {
+/* w3-container__main */
+.w3-container__main {
   padding: 0px 32px;
 }
-.next-pre {
+.main__next-pre {
   display: flex;
   justify-content: space-between;
 }
@@ -315,48 +359,50 @@ strong {
   color: white;
 }
 /* HTML Exercises */
-.main__exercises {
+.main__exercise-form {
   padding: 8px 20px;
   margin: 24px -20px;
   background-color: #282A35;
   border-radius: 5px;
 }
-.exercises__content{
+.exercises__window{
   background-color: #ffffff;
   padding: 16px;
   color: #000000;
   margin-bottom: 15px;
   
 }
-.exercises__code{
+.window__pre-container{
   margin: 20px 0px 10px 0px;
   background-color: #E7E9EB;
   padding: 16px;
   font-size: 120%;
   font-family: Consolas, Menlo, "Courier New", Courier, monospace;
 }
-.exercises__link{
+.window__link{
   color: black;
   display: block;
   margin-top: 1.2em;
   margin-bottom: 1.2em;
   font-weight: 600;
+  text-decoration: none;
 }
-.exercises__link:hover {
+.window__link:hover {
   color: #059862;
   
 }
 /* my lerning */
-.my-learning__img {
+.main__img {
   width: 840px;
+  max-width: 840px;
 }
-.reference__table {
+.main__table {
   display: flex;
   flex-flow: row wrap;
   justify-content: space-around;
   padding: 20px 0px;
 }
-.reference__table a {
+.main__table a {
   margin-bottom: 16px;
   font-weight: 500;
   width: 32%;
@@ -368,14 +414,14 @@ strong {
   background-color: #E7E9EB ;
   color: black ;
 }
-.reference__table a:hover{
+.main__table a:hover{
   background-color: black;
   color: white;
 }
-.get-career{
+.main__panel{
   width: 100%;
 }
-.video {
+.main__video {
   width: 80%;
   margin: 0px 10%;
 }
@@ -405,16 +451,16 @@ strong {
   color: #FFF4A3;
   text-decoration: none;
 }
-.footer__lessons {
+.footer__links {
   display: flex;
   width: 100%;
   justify-content: space-between;
   margin-bottom: 40px;
+  margin-left: 40px;
 }
 .type{
-  
   display: flex;
-  flex-flow: column nowrap;
+  flex-direction: column;
   
 }
 .type__title{
@@ -435,11 +481,16 @@ strong {
   color: white;
   display: flex;
   justify-content: space-between;
+  margin-left: 40px;
 }
 .footer__text a{
-  color: white;
-  
+  color: white; 
 }
+
+.footer__text{
+  margin-left: 40px;
+}
+
 .footer__some a {
   color: white;
   text-decoration: none;
@@ -447,4 +498,10 @@ strong {
 .footer__some a:hover{
   color: #FFF4A3;
   text-decoration: underline;
+}
+
+@media screen and (max-width: 1295px) {
+  .footer__items {
+    flex-direction: column;
+  }
 }
